--- a/app/assets/css/tailwind.css
+++ b/app/assets/css/tailwind.css
@@ -1,5 +1,6 @@
 @import 'tailwindcss';
 @import "tw-animate-css";
+@plugin 'tailwind-scrollbar';
 
 @custom-variant dark (&:is(.dark *));
 
@@ -201,6 +202,8 @@
   --shadow-lg: var(--shadow-lg);
   --shadow-xl: var(--shadow-xl);
   --shadow-2xl: var(--shadow-2xl);
+
+  --shadow-me: box-shadow: 1px -1px 55px -24px rgba(0,0,0,0.75);
 }
 
 @layer base {
